--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="above-game">
-      <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
+      <p class="game-intro">Join the tiles and get to the <strong>Jaffa ! ;) </strong></p>
       <a class="restart-button">New Game</a>
     </div>
 
